Fri Jan 29 00:11:52 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Deliver/Connection.pm (new): Display any errors opening
 	sockets.

	* lib/Mj/Deliver/Sorter.pm (new): Old bug: Somehow forgot to put
 	the filename into $self.

	* lib/Mj/Deliver.pm (deliver): Don't skip folks with class 'all'.

	* lib/Mj/Config.pm (compile_pattern): Make sure $force is defined.

	* lib/Mj/Access.pm (_a_replyfile): Aargh!  Don't delete the
 	replyfile arguments!  We want to keep those around!

	* lib/Mj/Config.pm (parse_digest_issues): Fix stupid bug: forgot
 	to actually give any data to the table parser.

	* lib/Mj/Deliver.pm (_eclass): Fix typo classarg1 -> classarg.
	(deliver): Don't try to deliver if we don't have the class in our
 	delivery list.

	* lib/Mj/List.pm (describe_class): Handle class args.
	(set): Handle class args properly.

	* lib/Majordomo.pm (_show): Pass both classargs to describe_class.

	* lib/Mj/List.pm (make_setting): Handle both classargs properly.
  	Don't make digest superclass; use classargs instead.

	* setup/ask_basic.pl (ask_basic): Use an enum for the umask
 	values.

	* lib/Mj/List.pm (make_setting): Also take the original class and
 	classarg; like the flags, if the setting string doesn't modify
 	them they are returned intact.

	* lib/Mj/Resend.pm (_post): No need to increment the volume number
 	for every post.

	* lib/Majordomo.pm (set): Take only $setting.

Thu Jan 28 20:42:09 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/TextOutput.pm (set): Just pass a setting, not an
 	action/arg pair.

	* lib/Mj/List.pm (set): Call make_setting to do the dirty work.
  	Why duplicate code?
	(make_setting): Handle digest names and types properly.  Put flags
 	at the head of the return lists in case classarg2 is used.

	* lib/Majordomo.pm (_subscribe): Adapt to new make_setting return.

	* postinstall: Generally use the site password everywhere where a
 	password is required.  It's the only password we can know for